# QHealth

./: .env.example  .gitignore  Dockerfile  QHealt.txt  README.md  docker-compose.yml  pyproject.toml  q_health.postman_collection.json  setup.cfg
apps/users/: models.py  serializer.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend/apps/auth/: serializer.py  urls.py  views.py
backend/apps/booking_diagnostic/: apps.py  consumer.py  filter.py  models.py  permissions.py  routing.py  serializer.py  urls.py  views.py
backend/apps/booking_doctor/: apps.py  consumer.py  filter.py  models.py  permissions.py  routing.py  serializer.py  urls.py  views.py
backend/apps/diagnostics/: consumer.py  filter.py  models.py  permissions.py  routing.py  serializer.py  urls.py  views.py
backend/apps/patient_card/: apps.py  consumer.py  filter.py  models.py  permissions.py  routing.py  serializer.py  urls.py  views.py
backend/apps/patient_recipe/: apps.py  consumer.py  filter.py  models.py  permissions.py  (+4 more)
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: pagination.py
backend/templates/: activate.html  base.html  birthday.html  block_doctor.html  block_user_account.html  booking_diagnostic_by_staff.html  booking_diagnostic_by_user.html  booking_visit_doctor.html  cancelled_booking_doctor.html  create_admin.html  create_role.html  deleted_account.html  merry_christmas.html  new_year.html  recovery.html  revoke_admin.html  send_patient_message.html  send_patient_recipe_message.html  unblock_doctor.html  unblock_user_account.html  verify_email.html  welcome.html
client/: asset-manifest.json  index.html  site.webmanifest
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js
users/: models.py  serializers.py
(+440 files in other folders)
